# pwcrypt

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  build-mingw.sh  build.bat  build.sh  codecov.yml  doxyfile  main.c  test.bat  test.sh
.circleci/: config.yml
csharp/: Program.cs  PwcryptSharp.csproj
csharp/PwcryptSharp/: .gitignore  Program.cs  PwcryptSharp.csproj
csharp/PwcryptSharp/lib/x64/linux/: libpwcrypt.so.3.1.1  libpwcrypt.so.3.1.2
csharp/PwcryptSharp/lib/x64/mac/: libpwcrypt.3.1.1.dylib  libpwcrypt.3.1.2.dylib
csharp/lib/: NOTICE
csharp/lib/x64/linux/: libpwcrypt.so.3.1.2  libpwcrypt.so.3.2.0  libpwcrypt.so.4.0.0  libpwcrypt.so.4.1.0  libpwcrypt.so.4.1.1  libpwcrypt.so.4.1.2  libpwcrypt.so.4.1.3  libpwcrypt.so.4.2.0  libpwcrypt.so.4.2.4
csharp/lib/x64/mac/: libpwcrypt.3.1.2.dylib  libpwcrypt.3.2.0.dylib  libpwcrypt.4.0.0.dylib  libpwcrypt.4.1.0.dylib  libpwcrypt.4.1.1.dylib  libpwcrypt.4.1.2.dylib  libpwcrypt.4.1.3.dylib  libpwcrypt.4.2.0.dylib  libpwcrypt.4.2.4.dylib
docs/: dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  pwcrypt_8h.html  pwcrypt_8h__incl.dot  pwcrypt_8h__incl.md5  pwcrypt_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  search.js  searchdata.js  variables_0.js  variables_1.js
include/: pwcrypt.h
lib/miniz/: VERSION
src/: main.c  pwcrypt.c
tests/: tests.c
